--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sinclair/typebox": "^0.34.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
+    "fastify-metrics": "^12.1.0",
     "fastify-plugin": "^5.0.0"
   },
   "devDependencies": {
